# canna-yubin

./: AUTHORS  COPYING  COPYING.GPL2  ChangeLog  INSTALL  JIGYOSYO.CSV  Makefile  Makefile.am  Makefile.in  Makefile.wnn  NEWS  README  README.eucJP  configure  configure.ac  jigyosyo.csv  yu2.PL  yu2can.pl
Canna/: Makefile.am
Wnn/: Makefile  Makefile.am
debian/: README.Debian  changelog  control  copyright  dirs  docs  postinst  prerm  rules  yubin.dics.dir.off
